@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/processBismarkBam.R
+% Please edit documentation in R/processBismarkAln.R
 \docType{methods}
 \name{processBismarkAln}
 \alias{processBismarkAln}
@@ -23,7 +23,8 @@ processBismarkAln(location, sample.id, assembly, save.folder = NULL,
   save.db = FALSE)
 }
 \arguments{
-\item{location}{location of sam or bam file(s). If multiple files are given this 
+\item{location}{location of sam or bam file(s). If multiple files are 
+given this 
 argument must be a list.}
 
 \item{sample.id}{the id(s) of samples in the same order as file.
@@ -35,8 +36,10 @@ when using multiple files from the same assembly, this string should be
 consistent in each object.}
 
 \item{save.folder}{The folder which will be used to save methylation call files,
-if set to NULL no methylation call file will be saved as a text file.
-The files saved can be read into R in less time using \code{methRead} 
+if set to NULL no methylation call file will be saved 
+as a text file.
+The files saved can be read into R in less time using 
+\code{methRead} 
 function in \code{methylKit}}
 
 \item{save.context}{A character vector consisting following strings: 
@@ -62,7 +65,7 @@ for methylation calling.}
 
 \item{minqual}{minimum phred quality score to call a methylation status for a base.}
 
-\item{phred64}{logical ( default: FALSE) you will not need to set this TRUE, 
+\item{phred64}{logical (default: FALSE) you will not need to set this TRUE, 
 Currently bismark gives only phred33 scale}
 
 \item{treatment}{treatment vector only to be used when location and sample.id 
@@ -85,7 +88,8 @@ named after this scheme:
 \code{methylRaw} or \code{methylRawList} object
 }
 \description{
-The function calls methylation percentage per base from sorted Bismark SAM or BAM 
+The function calls methylation percentage per base from sorted Bismark 
+SAM or BAM 
 files and reads methylation information as methylKit objects.
  Bismark is a popular aligner for 
 high-throughput bisulfite sequencing experiments and it outputs its results in 
